--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.vscode/
 .env
 .venv
 env/
@@ -109,7 +110,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-/venv/
+
 # Spyder project settings
 .spyderproject
 .spyproject
